--- a/src/css/specific.css
+++ b/src/css/specific.css
@@ -1,11 +1,32 @@
-.hidden {
-  display: none;
-}
-
+/* #region Common */
 body {
   font-family: Montserrat, sans-serif;
   font-size: 16px;
 }
+
+/* Buttons */
+.btn {
+  padding: 8px 16px;
+  color: #fff;
+  background-color: #4e75ff;
+  border: none;
+  border-radius: 8px;
+  font-weight: 500;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color;
+}
+.btn:hover {
+  background-color: #6c8cff;
+}
+.load-more {
+  display: block;
+  margin: 0 auto;
+  margin-top: 32px;
+}
+.hidden {
+  display: none;
+}
+/* #endregion Common */
 
 /* #region Form */
 .search-form {
@@ -37,20 +58,6 @@ body {
 
 .search-input::placeholder {
   color: #808080;
-}
-
-.search-btn {
-  padding: 8px 16px;
-  color: #fff;
-  background-color: #4e75ff;
-  border: none;
-  border-radius: 8px;
-  font-weight: 500;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: background-color;
-}
-.search-btn:hover {
-  background-color: #6c8cff;
 }
 /* #endregion Form */
 
